Dodanie bazowego szablonu z którego podstrony będą dziedziczyć kod

--- a/uczniowie/templates/index.html
+++ b/uczniowie/templates/index.html
@@ -1,66 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>Strona główna</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="static/css/style.css" rel="stylesheet">
-  </head>
-
-  <body class="text-center">
-
-    <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
-
-      <header class="masthead">
-        <div class="inner">
-          <h3 class="masthead-brand">Aplikacja "Uczniowie"</h3>
-
-          <!-- Navigation -->
-          <nav class="nav nav-masthead justify-content-center">
-            <a class="nav-link active" href="#">Strona główna</a>
-            <a class="nav-link" href="#">-</a>
-          </nav>
-
-        </div>
-      </header>
-
-      <main role="main" class="inner cover">
-        <h1 class="cover-heading">Uczniowie</h1>
-        <p class="lead">Jest to aplikacja sieciowa pozwalająca na dodawanie i edytowadnie klas oraz uczniów.</p>
-      </main>
-
-      <!-- Footer -->
-      <footer class="mastfoot mt-auto">
-        <div class="container">
-          <div class="row">
-            <div class="col">
-              <p>Wszelkie prawa zastrzeżone</p>
-            </div>
-            <div class="col">
-              <p>Cover template by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-            </div>
-          </div>
-        </div>
-      </footer>
-
-    </div>
-
-    <!-- Bootstrap core JavaScript -->
-    <script src="static/vendor/jquery/jquery.min.js"></script>
-    <script src="static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Plugin JavaScript -->
-    <script src="static/vendor/jquery-easing/jquery.easing.min.js"></script>
-
-    <!-- Custom JavaScript for this theme -->
-    <script src="static/js/scrolling-nav.js"></script>
-
-  </body>
-</html>
+{% extends "szablon.html" %}
+{% block tytul %}Strona główna{% endblock %}
+{% block h1 %}Uczniowie{% endblock %}
+{% block tresc %}<p class="lead">Jest to aplikacja sieciowa pozwalająca na dodawanie i edytowadnie klas oraz uczniów.</p>{% endblock %}
