Poprawienie modelu, aktualizacja menu

--- a/uczniowie/templates/dodajklase.html
+++ b/uczniowie/templates/dodajklase.html
@@ -1,5 +1,6 @@
 {% extends "szablon.html" %}
 {% block tytul %}Dodawanie klasy{% endblock %}
+{% block lista3 %} active{% endblock %}
 {% block h1 %}Dodaj klasę:{% endblock %}
 {% block tresc %}
 <div class="container">
