--- a/uczniowie/templates/index.html
+++ b/uczniowie/templates/index.html
@@ -1,4 +1,5 @@
 {% extends "szablon.html" %}
 {% block tytul %}Strona główna{% endblock %}
+{% block lista1 %} active{% endblock %}
 {% block h1 %}Uczniowie{% endblock %}
 {% block tresc %}<p class="lead">Jest to aplikacja sieciowa pozwalająca na dodawanie i edytowadnie klas oraz uczniów.</p>{% endblock %}
