--- a/uczniowie/templates/listaklas.html
+++ b/uczniowie/templates/listaklas.html
@@ -1,5 +1,6 @@
 {% extends "szablon.html" %}
 {% block tytul %}Lista klas{% endblock %}
+{% block lista2 %} active{% endblock %}
 {% block h1 %}Klasy:{% endblock %}
 {% block tresc %}
 <ol>
