Dodanie formularza dodawania uczniów, widoków dodawania i listy uczniów

--- a/uczniowie/templates/szablon.html
+++ b/uczniowie/templates/szablon.html
@@ -27,6 +27,8 @@
             <a class="nav-link{% block lista1 %}{% endblock %}" href="{{ url_for('index') }}">Strona główna</a>
             <a class="nav-link{% block lista2 %}{% endblock %}" href="{{ url_for('lista') }}">Lista Klas</a>
             <a class="nav-link{% block lista3 %}{% endblock %}" href="{{ url_for('dodaj') }}">Dodaj Klase</a>
+            <a class="nav-link{% block lista4 %}{% endblock %}" href="{{ url_for('listauczniow') }}">Lista Uczniów</a>
+            <a class="nav-link{% block lista5 %}{% endblock %}" href="{{ url_for('dodajucznia') }}">Dodaj Ucznia</a>
           </nav>
 
         </div>
