--- a/uczniowie/templates/szablon.html
+++ b/uczniowie/templates/szablon.html
@@ -27,6 +27,7 @@
             <a class="nav-link{% block lista1 %}{% endblock %}" href="{{ url_for('index') }}">Strona główna</a>
             <a class="nav-link{% block lista2 %}{% endblock %}" href="{{ url_for('listaklas') }}">Lista Klas</a>
             <a class="nav-link{% block lista3 %}{% endblock %}" href="{{ url_for('dodajklase') }}">Dodaj Klase</a>
+            <a class="nav-link{% block lista6 %}{% endblock %}" href="{{ url_for('listaklasdoedycji') }}">Edytuj Klase</a>
             <a class="nav-link{% block lista4 %}{% endblock %}" href="{{ url_for('listauczniow') }}">Lista Uczniów</a>
             <a class="nav-link{% block lista5 %}{% endblock %}" href="{{ url_for('dodajucznia') }}">Dodaj Ucznia</a>
           </nav>
