Dodanie widoku edytowania uczniów

--- a/uczniowie/templates/edytujklase.html
+++ b/uczniowie/templates/edytujklase.html
@@ -1,5 +1,6 @@
 {% extends "szablon.html" %}
 {% block tytul %}Edycja klasy{% endblock %}
+{% block lista6 %} active{% endblock %}
 {% block h1 %}Edycja klasy {{ iducznia.nazwa }}{% endblock %}
 {% block tresc %}
 <p class="lead">Aktualne dane klasy:</p>
