--- a/uczniowie/templates/szablon.html
+++ b/uczniowie/templates/szablon.html
@@ -30,6 +30,7 @@
             <a class="nav-link{% block lista6 %}{% endblock %}" href="{{ url_for('listaklasdoedycji') }}">Edytuj Klase</a>
             <a class="nav-link{% block lista4 %}{% endblock %}" href="{{ url_for('listauczniow') }}">Lista Uczniów</a>
             <a class="nav-link{% block lista5 %}{% endblock %}" href="{{ url_for('dodajucznia') }}">Dodaj Ucznia</a>
+            <a class="nav-link{% block lista7 %}{% endblock %}" href="{{ url_for('listauczniowdoedycji') }}">Edytuj Ucznia</a>
           </nav>
 
         </div>
